--- a/css/creative.css
+++ b/css/creative.css
@@ -435,9 +435,17 @@ body {
 
 #social-footer a {
     color: lightgrey;
-    font-size: 25px;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 #social-footer a:hover {
-    color: white;
+    color: #FFDBDA;
 }
+
+.vertical-align {
+    display: flex;
+    align-items: center;
+}
+
+
